@@ -15,15 +15,16 @@ import org.springframework.web.context.request.NativeWebRequest;
 import org.zalando.nakadi.domain.EventType;
 import org.zalando.nakadi.domain.NakadiCursor;
 import org.zalando.nakadi.domain.NakadiCursorLag;
+import org.zalando.nakadi.domain.PartitionEndStatistics;
 import org.zalando.nakadi.domain.PartitionStatistics;
 import org.zalando.nakadi.domain.Timeline;
 import org.zalando.nakadi.exceptions.InternalNakadiException;
 import org.zalando.nakadi.exceptions.InvalidCursorException;
 import org.zalando.nakadi.exceptions.NakadiException;
 import org.zalando.nakadi.exceptions.NoSuchEventTypeException;
-import org.zalando.nakadi.exceptions.runtime.NotFoundException;
 import org.zalando.nakadi.exceptions.runtime.InvalidCursorOperation;
 import org.zalando.nakadi.exceptions.runtime.MyNakadiRuntimeException1;
+import org.zalando.nakadi.exceptions.runtime.NotFoundException;
 import org.zalando.nakadi.exceptions.runtime.ServiceTemporarilyUnavailableException;
 import org.zalando.nakadi.repository.EventTypeRepository;
 import org.zalando.nakadi.service.AuthorizationValidator;
@@ -99,7 +100,7 @@ public class PartitionsController {
                         eventTypeName,
                         first.getPartition(),
                         cursorConverter.convert(first.getFirst()).getOffset(),
-                        cursorConverter.convert(last.getLast()).getOffset());
+                        cursorConverter.convert(selectLast(timelines, last, first)).getOffset());
             }).collect(Collectors.toList());
             return ok().body(result);
         } catch (final NoSuchEventTypeException e) {
@@ -111,10 +112,11 @@ public class PartitionsController {
     }
 
     @RequestMapping(value = "/event-types/{name}/partitions/{partition}", method = RequestMethod.GET)
-    public ResponseEntity<?> getPartition(@PathVariable("name") final String eventTypeName,
-                                          @PathVariable("partition") final String partition,
-                                          @Nullable @RequestParam(value = "consumed_offset", required = false)
-                                              final String consumedOffset, final NativeWebRequest request) {
+    public ResponseEntity<?> getPartition(
+            @PathVariable("name") final String eventTypeName,
+            @PathVariable("partition") final String partition,
+            @Nullable @RequestParam(value = "consumed_offset", required = false) final String consumedOffset,
+            final NativeWebRequest request) {
         LOG.trace("Get partition endpoint for event-type '{}', partition '{}' is called", eventTypeName, partition);
         try {
             final EventType eventType = eventTypeRepository.findByName(eventTypeName);
@@ -172,19 +174,22 @@ public class PartitionsController {
         if (!firstStats.isPresent()) {
             throw new NotFoundException("partition not found");
         }
-        final PartitionStatistics lastStats;
+        final NakadiCursor newest;
         if (timelines.size() == 1) {
-            lastStats = firstStats.get();
-        } else  {
-            lastStats = timelineService.getTopicRepository(timelines.get(timelines.size() - 1))
-                    .loadPartitionStatistics(timelines.get(timelines.size() - 1), partition).get();
+            newest = firstStats.get().getLast();
+        } else {
+            final PartitionStatistics lastStats = timelineService
+                    .getTopicRepository(timelines.get(timelines.size() - 1))
+                    .loadPartitionStatistics(timelines.get(timelines.size() - 1), partition)
+                    .get();
+            newest = selectLast(timelines, lastStats, firstStats.get());
         }
 
         return new EventTypePartitionView(
                 eventTypeName,
-                lastStats.getPartition(),
+                partition,
                 cursorConverter.convert(firstStats.get().getFirst()).getOffset(),
-                cursorConverter.convert(lastStats.getLast()).getOffset());
+                cursorConverter.convert(newest).getOffset());
     }
 
     private CursorLag toCursorLag(final NakadiCursorLag nakadiCursorLag) {
@@ -195,4 +200,26 @@ public class PartitionsController {
                 nakadiCursorLag.getLag()
         );
     }
+
+
+    private static NakadiCursor selectLast(final List<Timeline> activeTimelines, final PartitionEndStatistics last,
+                                           final PartitionStatistics first) {
+        final NakadiCursor lastInLastTimeline = last.getLast();
+        if (!lastInLastTimeline.isInitial()) {
+            return lastInLastTimeline;
+        }
+        // There may be a situation, when there is no data in all the timelines after first, but any cursor from the
+        // next after first timelines is greater then the cursor in first timeline. Therefore we need to roll pointer
+        // to the end back till the very beginning or to the end of first timeline with data.
+        for (int idx = activeTimelines.size() - 2; idx > 0; --idx) {
+            final Timeline timeline = activeTimelines.get(idx);
+            final NakadiCursor lastInTimeline = timeline.getLatestPosition()
+                    .toNakadiCursor(timeline, first.getPartition());
+            if (!lastInTimeline.isInitial()) {
+                return lastInTimeline;
+            }
+        }
+        return first.getLast();
+    }
+
 }
